qtsvg-opensource-src (5.3.1-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Aug 2014 18:34:12 +0400

qtsvg-opensource-src (5.3.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Disable test until we get the transition sorted. Yes, ugly hack.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 02 Jul 2014 17:29:48 -0300

qtsvg-opensource-src (5.3.0-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 06 Jun 2014 16:06:44 -0300

qtsvg-opensource-src (5.3.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Change header's path in install files. Mark development packages as
    Multi-Arch: same.
  * Make libqt5svg5 provide qtsvg-abi-5-3-0 to track private symbols.
    - Modify symbols file for letting the tracking work.
    - Create mark_private_symbols.sh to mark the private symbols.
    - Run mark_private_symbols.sh after dh_makeshlibs.
    - Mark private symbols as such.
    - Add the script to debian/copyright.
  * Do not override dh_builddeb anymore, xz compression is now the default
    method.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 26 May 2014 13:15:53 -0300

qtsvg-opensource-src (5.2.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 24 Mar 2014 23:58:57 -0300

qtsvg-opensource-src (5.2.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 19 Feb 2014 19:39:03 -0300

qtsvg-opensource-src (5.2.0-3) unstable; urgency=medium

  * Upload to unstable.
  * Update symbols files with buildd's logs.
  * Move mkspec files to their new location.