@@ -15,8 +15,6 @@ Build-Depends: dbus,
                pkg-kde-tools,
                qtbase5-dev (>= 5.3.1+dfsg-2~),
                qtbase5-private-dev (>= 5.3.1+dfsg-2~),
-               xauth,
-               xvfb,
                zlib1g-dev
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.3.1+dfsg-2~), qttools5-dev-tools (>= 5.3.1~)
 Standards-Version: 3.9.5
