@@ -1,5 +1,9 @@
 qtsvg-opensource-src (5.3.1-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Run tests again.
+  * Set QT_QPA_PLATFORM=minimal when running tests, so that they
+    can be run without Xvfb.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Aug 2014 18:34:12 +0400
 
